--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "calculator",
+  "name": "express-server",
   "version": "1.0.0",
   "description": "A simple calculator app",
-  "main": "calculator.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
